# smart_city_cloud_edge_simulator

./: CMakeLists.txt  comms.csv  default.nix  execute.sh  requests.csv
cmake/Modules/: FindSimGrid.cmake
input/co2eq/: 0gco2eq.csv  100gco2eq.csv  10gco2eq.csv  (+12 more)
output_baseline/: jobs.csv  tasks.csv
output_bestfit/: comms.csv  jobs.csv  requests.csv  tasks.csv
src/: CMakeLists.txt  CommunicationInterface.hpp  ComputingNode.hpp  DAGDispatcher.cpp  DAGDispatcher.hpp  DAGManager.cpp  DAGManager.hpp  DAGOfTasks.cpp  DAGOfTasks.hpp  EdgeHost.cpp  EdgeHost.hpp  ElectricityCO2eq.cpp  ElectricityCO2eq.hpp  EnergyStorageDevice.hpp  LithiumIonBattery.cpp  LithiumIonBattery.hpp  MailBoxSingleton.cpp  MailBoxSingleton.hpp  Message.hpp  PVPanel.cpp  PVPanel.hpp  SchedulingBaseline.cpp  SchedulingBaseline.hpp  SchedulingBestCO2.cpp  SchedulingBestCO2.hpp  SchedulingBestCO2Neighbours.cpp  SchedulingBestCO2Neighbours.hpp  SchedulingBestCO2Volume.cpp  SchedulingBestCO2Volume.hpp  SchedulingBestFit.cpp  SchedulingBestFit.hpp  SchedulingGEFT.cpp  SchedulingGEFT.hpp  SchedulingHEFT.cpp  SchedulingHEFT.hpp  SchedulingHostType.cpp  SchedulingHostType.hpp  SchedulingLCAHEFT.cpp  SchedulingLCAHEFT.hpp  SchedulingStrategy.hpp  (+10 more)
util/: compare_requests.py  extract_co2_summary_info.py  extract_data_requests.py  extract_energy_summary_info.py  extract_request_success_ratio.py  extract_response_time_summary.py  generate_requests_table.py  generate_workload.sh  graph_generator.py  input_file_generator.py  process_log.py  request_generator_v2.py  workload_generator.py  workload_multiplier.py
(+221797 files in other folders)
